# A-Maze-Ing

./: .gitignore  Makefile  README.md  a_maze_ing.py  config.txt  playing_mod.py  pyproject.toml  sound_manager.py
mazegen/: __init__.py  cell.py  errors.py  gen_maze.py  maze.py  themes.py
mazegen/visualization/: __init__.py  display.py  splash.py
